# Market_Prediction_DL_Final_Project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  Optimizing_Prompts_for_Extracting_Slides_Bitcoin_Price_Predictions_from_News_Articles.pptx  README.md  bitcoin_sentiment.py  docker-compose.yml  pyproject.toml
BTC_Price_Sentiment_Prediction/: Main.tex  references.bib  teaser.tex  teaser_body.tex
apps/: __init__.py
apps/dashboard/: app.py
apps/inference_api/: main.py
apps/llm_scoring/: __init__.py  main.py
apps/scraper_filter/: __init__.py  main.py
apps/training/: main.py
data/: override.rtf
data/authordemo/: authorTestData.csv  author_test.jsonl  btc-usd-max.csv
data/qwk/: README.md  manifest.json
data/test/: BTC Project - Human Gold Standard Dataset (GEPA Input).xlsx  Human Gold Standard Test Dataset.xlsx  articles_test.jsonl  testing_dataset.jsonl
data/train/: BTC Project - Human Gold Standard Dataset (GEPA Input).xlsx  articles.jsonl  articles_with_text.jsonl
docker/base/: Dockerfile
docker/llm_scoring/: Dockerfile
docker/research/: Dockerfile
docker/scraper_filter/: Dockerfile
docker/serving/: Dockerfile
docker/training/: Dockerfile
docs/pipeline/: STAGE1_API_SETUP.md
infra/env/: .env.example
infra/healthchecks/: fastapi_healthcheck.py
market_prediction_dl_final_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
outputs/: author_evaluation.csv  author_evaluation_report.md  author_evaluation_summary.csv
outputs/test_author/: author_evaluation_report.md  author_evaluation_summary.csv
outputs/test_eval/: README.md  error_matrix.csv  parse_matrix.csv  (+5 more)
reports/: claude_token_cost_estimate.md  generate_report.py  gepa_run_claude_sonnet46.md
scripts/: build_qwk_inputs.py  convert_gold_standard_xlsx.py  evaluate_author.py  run_final_analysis.py  run_gepa.py  run_gepa_rate_limited.py  run_gepa_reports.py  run_qwk_best_vs_seed.py  run_qwk_per_model.py  run_real_world_validation.py  run_test_eval.py  run_test_evaluation.py  run_test_evaluation_direction.py  scrape_article_text.py  smoketest_claude_token_cost.py
src/: __init__.py
(+366 files in other folders)
