[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-news-prompt-optimization"
version = "0.1.0"
description = "GEPA-based prompt optimization for extracting Bitcoin price prediction information from curated news articles."
readme = "README.md"
requires-python = ">=3.10.19"
authors = [
  { name = "Project Team" }
]
dependencies = [
  "gepa>=0.1.1",
  "litellm>=1.75.0",
  "orjson>=3.10.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.6.0",
  "tenacity>=9.0.0",
  "typer>=0.16.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
